--- a/arch/arm64/configs/markw_defconfig
+++ b/arch/arm64/configs/markw_defconfig
@@ -36,7 +36,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-R1"
+CONFIG_LOCALVERSION="-PALODA-KERNEL-R2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -550,6 +550,11 @@ CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_MSM_THERMAL_SIMPLE=y
 CONFIG_FORCE_FAST_CHARGE=y
+
+#paloda_Additions
+CONFIG_ZEN_INTERACTIVE=y
+CONFIG_LAZYPLUG=y
+CONFIG_ZEN_DECISION=y
 
 
 #
